@@ -45,6 +45,7 @@ CREATE TABLE sys_dmail (
   uid int(11) unsigned NOT NULL auto_increment,
   pid int(11) unsigned DEFAULT '0' NOT NULL,
   tstamp int(11) unsigned DEFAULT '0' NOT NULL,
+  deleted tinyint(4) unsigned DEFAULT '0' NOT NULL,
   type tinyint(4) unsigned DEFAULT '0' NOT NULL,
   page int(11) unsigned DEFAULT '0' NOT NULL,
   attachment tinyblob NOT NULL,
